fixed text to work for light/dark mode

--- a/src/components/Active-Button/page.module.css
+++ b/src/components/Active-Button/page.module.css
@@ -1,6 +1,5 @@
 .ActiveButton {
   padding: 0.7rem 7.4rem;
-  background: #b077ff;
   text-align: center;
   border-radius: 5px;
   white-space: nowrap;
